@@ -120,6 +120,11 @@ Beta 1
     and in macros invoked from Actions. Additionally, Macros used in
     Actions are now free to invoke other actions.
 
+4)  There is now limited support for parameterized actions. Currently,
+    the parameters are only available to extensions scripts. See
+    http://www.shorewall.net/Actions.html#Extension for more
+    information.
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
